# lab1_ws

./: README.md
install/: local_setup.sh  setup.sh
install/lab1_pkg/lib/lab1_pkg/: talker.py
install/lab1_pkg/share/lab1_pkg/: local_setup.sh  package.sh
install/lab1_pkg/share/lab1_pkg/launch/: lab1_launch.launch.py
log/: latest_build
src/lab1_pkg/: CMakeLists.txt  package.xml
src/lab1_pkg/scripts/: relay.py  talker.py
